JdbcTemplate访问数据库

--- a/spring-boot-freemarker/src/main/resources/application.properties
+++ b/spring-boot-freemarker/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=1000
 # FREEMARKER (FreeMarkerAutoConfiguration)
+#request.contextPath
 spring.freemarker.request-context-attribute=request
