--- a/spring-boot-mybatis/src/main/resources/application.properties
+++ b/spring-boot-mybatis/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
 spring.datasource.password=123456
 # Mybatis 配置
-mybatis.typeAliasesPackage=com.example.learn.springbootlearn.entity
+mybatis.typeAliasesPackage=com.gx.springbootmybatis.entity
 #这种方式需要自己在resources目录下创建mapper目录然后存放xml
 mybatis.mapperLocations=classpath:mapper/*.xml
 # 驼峰命名规范 如：数据库字段是  order_id 那么 实体字段就要写成 orderId(好处resultMap的映射可以省略掉了)
