--- a/spring-boot-thymeleaf/src/main/resources/application.properties
+++ b/spring-boot-thymeleaf/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=1000
-#Çå³ı»º´æ£¬ÊµÏÖÈÈ²¿Êğ¡£Ò²¾ÍÊÇĞŞ¸ÄÁËhtmlºó²»ÓÃÖØÆô
+#ä½¿ç”¨thymleafä¿®æ”¹é¡µé¢ä¸é‡å¯ç”Ÿæ•ˆ
 spring.thymeleaf.cache=false
